--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,8 @@
 body {
-    background: black;
+    background: #171616;
     color: white;
 }
+
 
 .centered {
     position: fixed;
@@ -14,18 +15,26 @@ body {
     text-align: center;
 }
 
-.button {
-    background-color: white;
+.image {
     border: none;
-    color: black;
+    margin: auto;
+    display: inline-block;
+}
+
+.button {
+    background-color: black;
+    border: none;
+    color: white;
+    border-radius: 8px;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
+    font-weight: bold;
     display: inline-block;
     font-size: 16px;
     margin: auto;
     cursor: pointer;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 0 8px black;
 }
 
 .flex-container {
