--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,17 +1,17 @@
 body {
     background: #171616;
     color: white;
+    height: 100%;
+    width: 100%;
+}
+
+html {
+    height: 100%;
+    width: 100%;
 }
 
 
-.centered {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.centered h2 {
+h2 {
     text-align: center;
 }
 
@@ -22,7 +22,7 @@ body {
 }
 
 .button {
-    background-color: black;
+    background-color: #688699;
     border: none;
     color: white;
     border-radius: 8px;
@@ -34,11 +34,35 @@ body {
     font-size: 16px;
     margin: auto;
     cursor: pointer;
-    box-shadow: 0 0 8px black;
+    box-shadow: 0 0 8px #688699;
 }
 
-.flex-container {
+.top-level-flex {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+}
+
+.empty-flex {
+    flex: 1;
+}
+
+
+.content-flex {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
+    flex: 2;
+}
+
+.social-flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 32px;
+}
+
+.social-icon {
+    height: 24px;
+    width: 24px;
 }
