add: self image asset

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,9 +16,10 @@ h2 {
 }
 
 .image {
-    border: none;
     margin: auto;
-    display: inline-block;
+    object-fit: fill; /* Do not scale the image */
+    height: 400px;
+    width: 300px;
 }
 
 .button {
