--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background: #171616;
+    background: grey;
     color: white;
     height: 100%;
     width: 100%;
@@ -16,9 +16,12 @@ h2 {
 }
 
 .image {
+    border-radius: 50%;
     margin: auto;
-    object-fit: fill; /* Do not scale the image */
-    height: 400px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    object-fit: cover;
+    height: 300px;
     width: 300px;
 }
 
@@ -48,12 +51,19 @@ h2 {
     flex: 1;
 }
 
+.content-column {
+    display: flex;
+    flex-direction: column;
+}
+
 
 .content-flex {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     flex: 2;
+    border-radius: 16px;
+    background-color: #171616;
 }
 
 .social-flex {
