fix: don't use gradient background

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,5 @@
 body {
-    background: rgb(2,0,36);
-    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(35,76,134,1) 26%, rgba(129,9,45,1) 100%); 
+    background: rgba(35,76,134,1);
     color: white;
     height: 100%;
     width: 100%;
