--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,15 +1,16 @@
 body {
-    background: rgba(35,76,134,1);
     color: white;
     height: 100%;
     width: 100%;
 }
 
 html {
+    background: rgba(35, 76, 134, 1);
+    background: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, rgba(35, 76, 134, 1) 26%, rgba(129, 9, 45, 1) 100%);
     height: 100%;
     width: 100%;
+    overflow: hidden;
 }
-
 
 h2 {
     text-align: center;
@@ -54,8 +55,8 @@ h2 {
 .content-column {
     display: flex;
     flex-direction: column;
+    flex: 2;
 }
-
 
 .content-flex {
     display: flex;
@@ -65,6 +66,9 @@ h2 {
     border-radius: 16px;
     background-color: #171616;
     padding: 1rem;
+    -webkit-box-shadow: 0px 1px 11px 0px rgba(0, 0, 1, 1);
+    -moz-box-shadow: 0px 1px 11px 0px rgba(0, 0, 1, 1);
+    box-shadow: 0px 1px 11px 0px rgba(0, 0, 1, 1);
 }
 
 .social-flex {
@@ -76,4 +80,5 @@ h2 {
 .social-icon {
     height: 24px;
     width: 24px;
+    cursor: pointer;
 }
