add: footnote styles. fix: picture position

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,7 @@ html {
     margin-bottom: 0px;
     margin-top: 0px;
     object-fit: cover;
+    object-position: top;
     height: 250px;
     width: 250px;
 }
@@ -114,4 +115,15 @@ html {
     font-size: 1.3rem;
     line-height: 2rem;
     font-weight: bolder;
+}
+
+.footnote-flex {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.footnote-flex > p {
+    text-align: center;
 }
