--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 body {
-    color: white;
+    color: #F3E2CF;
     height: 100%;
     width: 100%;
 }
@@ -10,6 +10,7 @@ html {
     min-height: 100%;
     height: 100%;
     width: 100%;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 @media only screen and (min-width: 600px) {
@@ -59,7 +60,7 @@ html {
 .content-column {
     display: flex;
     flex-direction: column;
-    flex: 2;
+    flex: 3;
 }
 
 .content-flex {
@@ -113,7 +114,7 @@ html {
 .description {
     text-align: center;
     font-size: 1.3rem;
-    line-height: 2rem;
+    line-height: 2.4rem;
     font-weight: bolder;
 }
 
@@ -121,7 +122,7 @@ html {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: end;
 }
 
 .footnote-flex > p {
