--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,138 +1,49 @@
-/* Define variables */
-:root {
-  --page-background:  #fafafa;
-  --content-background: #fafafa;
-  --text-color: 212121;
+.light-theme {
+  --background-color:  #fafafa;
+  --text-color: #212121;
   --link-color: #1976D2;
-  --content-shadow-color: #001111;
+  --shadow-color: #001111;
 }
+
+.dark-theme {
+  --background-color:  #212121;
+  --text-color: #fafafa;
+  --link-color: #1976D2;
+  --shadow-color: #e2f1f1;
+}
+
 
 body {
-    color: var(--text-color);
-    height: 100%;
-    width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-html {
-    background: var(--page-background);
-    min-height: 100%;
-    height: 100%;
-    width: 100%;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-@media only screen and (min-width: 600px) {
-    html {
-        overflow: hidden;
-    }
+.toggle {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
 }
 
 
-.image {
-    border-radius: 50%;
-    margin: auto;
-    margin-bottom: 0px;
-    margin-top: 0px;
-    object-fit: cover;
-    object-position: top;
-    height: 250px;
-    width: 250px;
+#toggle-img {
+  width: 24px;
+  height: 24px;
 }
 
-.button {
-    background-color: #688699;
-    border: none;
-    color: white;
-    border-radius: 8px;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    font-weight: bold;
-    display: inline-block;
-    font-size: 16px;
-    margin: auto;
-    cursor: pointer;
-    box-shadow: 0 0 8px #688699;
+#intro-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
-.top-level-flex {
-    display: flex;
-    flex-direction: row;
-    height: 100%;
+.self-image {
+  width: 30vw;
+  height: 30vw;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: top;
 }
 
-.empty-flex {
-    flex: 1;
-}
+#intro-content {
 
-.content-column {
-    display: flex;
-    flex-direction: column;
-    flex: 3;
-}
-
-.content-flex {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex: 2;
-    border-radius: 16px;
-    background-color: var(--content-background);
-    padding: 1rem;
-    -webkit-box-shadow: 0px 1px 11px 0px var(--content-shadow-color);
-    -moz-box-shadow: 0px 1px 11px 0px var(--content-shadow-color);
-    box-shadow: 0px 1px 11px 0px var(--content-shadow-color);
-}
-
-/* Make sure social-flex visibility is hidden to avoid getting hover effect between items */
-.social-flex {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    visibility: hidden;
-}
-
-.social-icon {
-    height: 24px;
-    width: 24px;
-    cursor: pointer;
-    visibility: visible;
-    transition: 0.5s all;
-}
-
-.social-flex:hover .social-icon {
-    filter: blur(1px);
-    opacity: 0.5;
-    transform: scale(0.98);
-    box-shadow: none;
-}
-
-.social-flex:hover .social-icon:hover {
-    filter: blur(0px);
-    opacity: 1;
-    transform: scale(1);
-
-}
-
-.link {
-    color: var(--link-color);
-    cursor: pointer;
-}
-
-.description {
-    text-align: center;
-    font-size: 1.2rem;
-    line-height: 2rem;
-    font-weight: 400;
-}
-
-.footnote-flex {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-}
-
-.footnote-flex > p {
-    text-align: center;
 }
